--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             </div>
             
             <div class="authors">
-                <span class="author">Hsuan-Kung Yang</span>
-                <span class="author">Tsu-Ching Hsiao</span>
+                <a href="https://hsuan-kung.xyz/" class="author author-link" target="_blank">Hsuan-Kung Yang</a>
+                <a href="https://scholar.google.com/citations?user=D2sjaA4AAAAJ" class="author author-link" target="_blank">Tsu-Ching Hsiao</a>
                 <span class="author">Ryoichiro Oka</span>
                 <span class="author">Ryuya Nishino</span>
                 <span class="author">Satoko Tofukuji</span>
