update author link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="authors">
                 <a href="https://hsuan-kung.xyz/" class="author author-link" target="_blank">Hsuan-Kung Yang</a>
                 <a href="https://scholar.google.com/citations?user=D2sjaA4AAAAJ" class="author author-link" target="_blank">Tsu-Ching Hsiao</a>
-                <span class="author">Ryoichiro Oka</span>
+                <a href="https://ryoichirooka.com/" class="author author-link" target="_blank">Ryoichiro Oka</a>
                 <span class="author">Ryuya Nishino</span>
                 <span class="author">Satoko Tofukuji</span>
                 <span class="author">Norimasa Kobori</span>
