update author link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="https://ryoichirooka.com/" class="author author-link" target="_blank">Ryoichiro Oka</a>
                 <span class="author">Ryuya Nishino</span>
                 <span class="author">Satoko Tofukuji</span>
-                <span class="author">Norimasa Kobori</span>
+                <a href="https://jp.linkedin.com/in/norimasa-kobori" class="author author-link" target="_blank">Norimasa Kobori</a>
             </div>
             
             <div class="affiliations">
