update arxiv link

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </div>
             
             <div class="links">
-                <a href="preprint.pdf" class="btn btn-primary" target="_blank">📄 Preprint</a>
-                <a href="#" class="btn btn-secondary" target="_blank">📊 ArXiv (Coming Soon)</a>
+                <span class="btn btn-secondary" style="pointer-events: none; opacity: 0.6;">📄 Paper (Coming Soon)</span>
+                <a href="https://arxiv.org/abs/2508.16602" class="btn btn-primary" target="_blank"><img src="arxiv-logomark-small.svg" alt="ArXiv" style="width: 16px; height: 16px; margin-right: 8px; vertical-align: middle;"> Preprint (ArXiv)</a>
             </div>
             
             <!-- Teaser Figure -->
